--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "antd": "^4.20.2",
+    "babel-plugin-import": "^1.13.5",
+    "css-loader": "^6.7.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "style-loader": "^3.3.1",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
